--- a/CustomEscape/CustomEscape.csproj
+++ b/CustomEscape/CustomEscape.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
@@ -49,14 +49,14 @@
             <HintPath>$(EXILED_REFERENCES)\Mirror.dll</HintPath>
             <Private>False</Private>
         </Reference>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Data.DataSetExtensions"/>
-        <Reference Include="Microsoft.CSharp"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Net.Http"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="Microsoft.CSharp" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Net.Http" />
+        <Reference Include="System.Xml" />
         <Reference Include="UnityEngine">
             <HintPath>$(EXILED_REFERENCES)\UnityEngine.dll</HintPath>
             <Private>False</Private>
@@ -73,16 +73,16 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Configs.cs"/>
-        <Compile Include="CustomEscape.cs"/>
-        <Compile Include="CustomEscapeComponent.cs"/>
-        <Compile Include="EventHandlers.cs"/>
-        <Compile Include="Patches\Escaping.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
+        <Compile Include="Configs.cs" />
+        <Compile Include="CustomEscape.cs" />
+        <Compile Include="CustomEscapeComponent.cs" />
+        <Compile Include="EventHandlers.cs" />
+        <Compile Include="Patches\Escaping.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="EXILED" Version="5.0.0-alpha.21"/>
-        <PackageReference Include="Lib.Harmony" Version="2.1.1"/>
+        <PackageReference Include="EXILED" Version="5.0.0-beta.5" />
+        <PackageReference Include="Lib.Harmony" Version="2.1.1" />
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
